--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -77,6 +77,7 @@ on init
     chown root root /dev/fp_drv
 
 on post-fs
+    start ril-daemon
     chmod 0755 /sys/kernel/debug/tracing
 
 on early-boot
